syntax = "proto3";

option go_package = "core/capabilities/remote/types";

package remote;

enum Error {
  OK = 0;
  VALIDATION_FAILED = 1;
  CAPABILITY_NOT_FOUND = 2;
}

message Message {
  bytes signature = 1;
  bytes body = 2; // proto-encoded MessageBody to sign
}

message MessageBody {
  uint32 version = 1;
  bytes sender = 2;
  bytes receiver = 3;
  bytes message_id = 4; // scoped to (don_id, capability_id)
  string capability_id = 5;
  string don_id = 6; // where the capability actually lives
  string method = 7;
  int64 timestamp = 8;
  bytes payload = 9;
  Error error = 10;
}
